--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-This Repository contains demostration code for the Python classes by the GICS Dennis Ritchie
+This Repository contains demostration code for the Python classes by:
+The GICS Dennis Ritchie
 from "Universidad Nacional de Ingeniería" (Lima-PE)
