--- a/README
+++ b/README
@@ -1,3 +1,8 @@
 This Repository contains demostration code for the Python classes by:
 The GICS Dennis Ritchie
 from "Universidad Nacional de Ingeniería" (Lima-PE)
+
+Licence: LGPL V.3
+Authors:
+    Frank Moreno
+    Aldo Culquicondor
